--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -6,7 +6,7 @@
 </div>
 <%# body %>
 <div class="text-end">
-  <a href="<%=new_pet_path(current_user)%>" class="btn btn-primary text-white me-5 shadow-sm" >
+  <a href="<%=new_user_pet_path(current_user)%>" class="btn btn-primary text-white me-5 shadow-sm" >
     Ajouter un autre animal
   </a>
 </div>
@@ -19,7 +19,19 @@
     <div class="col-lg-5 col-sm-10 card_pro d-flex flex-column justify-content-between">
       <div>
         <h3 class="text-center m-3"><%= @pet.name %></h3>
-        <p class="my-2">Âge: <%= (Date.today - @pet.birthday).to_i/ 365.25.round %> ans</p>
+        <p class="my-2">Âge:
+          <% if @pet.birthday.present? %>
+            <% age_in_years = (Date.today - @pet.birthday).to_i / 365.25 %>
+            <% if age_in_years >= 0 %>
+              <%= age_in_years.round %> ans
+            <% else %>
+              <% age_in_months = (Date.today.month - @pet.birthday.month) + (Date.today.year - @pet.birthday.year) * 12 %>
+              <%= age_in_months.abs %> mois
+            <% end %>
+          <% else %>
+            0
+          <% end %>
+        </p>
         <p>Sexe: <%= @pet.sex %></p>
         <p class="my-2">Race: <%= @pet.species %></p>
         <p class="my-2">Identification: <%= @pet.identification %></p>
@@ -27,7 +39,7 @@
       </div>
       <div>
         <div class="text-center">
-          <a href="<%=edit_pet_path(@pet)%>" class="btn btn-primary text-white shadow-sm" >
+          <a href="<%=edit_user_pet_path(current_user, @pet)%>" class="btn btn-primary text-white shadow-sm" >
             Modifier les informations
           </a>
         </div>
@@ -38,12 +50,11 @@
     </div>
   </div>
   <%# appointments %>
-  <div class="row card_pro text-center">
+  <div class="row card_pro text-center position-relative">
     <h3 class="text-center m-3">Les rendez-vous</h3>
     <% if @appointments.empty? %>
       <div class="text-center">
         <p >Vous n'avez pas de rendez-vous</p>
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png" alt="pas de rdv" style="width: 200px;" >
       </div>
     <% else %>
       <% @appointments.each do |a| %>
@@ -63,49 +74,59 @@
         </div>
       <% end %>
     <% end%>
+    <div class="m-3 position-absolute top-0 end-0">
+      <%= link_to raw("<i class='fa-solid fa-plus float-end text-primary shadow myCircleIcon p-3 hoveredCircleButton'></i>"),
+                          professionals_path,
+                          class: "hoveredCircleButton",
+                          style: "font-size: 36px;"
+                           %>
+    </div>
   </div>
   <%# les vaccins %>
-  <div class="card_pro d-flex flex-column justify-content-between p-4" data-controller="alert" >
+  <div class="card_pro d-flex flex-column justify-content-between p-4 position-relative" data-controller="alert" >
     <div>
       <h3 class="text-center m-3">Les vaccins</h3>
       <%i=0%>
-      <div class="d-flex flex-wrap justify-content-center align-items-center" id="vaccins-container">
-        <% @vaccinations.each do |vaccin| %>
-          <% i = i+1 %>
-          <div class="d-flex flex-row m-4 vaccination-item">
-            <p><%=i%>.</p>
-            <div class="mx-2">
-              <p class="vaccin-name">Nom de vaccin : <strong><%=vaccin.name%></strong></p>
-              <p class="vaccin-administration-date">Date d'administration : <%=vaccin.administration_date%></p>
-              <div class="d-flex flex-row">
-                <p>Prochaine date d'injection : </p>
-                <p class="mx-2 <%= vaccin.next_booster_date > Date.today ? 'text-success' : 'text-danger' %> vaccin-next-booster-date"><%=vaccin.next_booster_date%></p>
+      <% if @vaccinations.empty? %>
+        <p class="mt-3 text-center">Vous n'avez pas encore saisi les informations de vaccins.</p>
+      <% else %>
+        <div class="d-flex flex-wrap justify-content-center align-items-center" id="vaccins-container">
+          <% @vaccinations.each do |vaccin| %>
+            <% i = i+1 %>
+            <div class="d-flex flex-row m-4 vaccination-item">
+              <p><%=i%>.</p>
+              <div class="mx-2">
+                <p class="vaccin-name">Nom de vaccin : <strong><%=vaccin.name%></strong></p>
+                <p class="vaccin-administration-date">Date d'administration : <%=vaccin.administration_date%></p>
+                <div class="d-flex flex-row">
+                  <p>Prochaine date d'injection : </p>
+                  <p class="mx-2 <%= vaccin.next_booster_date > Date.today ? 'text-success' : 'text-danger' %> vaccin-next-booster-date"><%=vaccin.next_booster_date%></p>
+                </div>
+              </div>
+              <div class="d-flex flex-column justify-content-around">
+                <%= link_to raw("<i class='fa-solid fa-edit float-end text-primary shadow myCircleIcon p-3 hoveredCircleButton'></i>"),
+                            "#",
+                            class: "hoveredCircleButton ",
+                            style: "font-size: 12px;",
+                            data: { controller: "alert",
+                                    action: "click->alert#editVaccination",
+                                    pet_id: @pet.id,
+                                    vaccin_id: vaccin.id,
+                                    vaccin_name: vaccin.name,
+                                    administrationDate:  vaccin.administration_date,
+                                    nextBoosterDate: vaccin.next_booster_date} %>
+                <%= link_to raw("<i class='fa-solid fa-trash float-end text-danger shadow myCircleIcon p-3 hoveredCircleButton'></i>"),
+                            "#",
+                            class: "hoveredCircleButton my-2",
+                            style: "font-size: 12px;",
+                            data: { controller: "alert", action: "click->alert#deleteVaccination", pet_id: @pet.id, vaccin_id: vaccin.id } %>
               </div>
             </div>
-            <div class="d-flex flex-column justify-content-around">
-              <%= link_to raw("<i class='fa-solid fa-edit float-end text-primary shadow myCircleIcon p-3 hoveredCircleButton'></i>"),
-                          "#",
-                          class: "hoveredCircleButton ",
-                          style: "font-size: 12px;",
-                          data: { controller: "alert",
-                                  action: "click->alert#editVaccination",
-                                  pet_id: @pet.id,
-                                  vaccin_id: vaccin.id,
-                                  vaccin_name: vaccin.name,
-                                  administrationDate:  vaccin.administration_date,
-                                  nextBoosterDate: vaccin.next_booster_date} %>
-
-              <%= link_to raw("<i class='fa-solid fa-trash float-end text-danger shadow myCircleIcon p-3 hoveredCircleButton'></i>"),
-                          "#",
-                          class: "hoveredCircleButton my-2",
-                          style: "font-size: 12px;",
-                          data: { controller: "alert", action: "click->alert#deleteVaccination", pet_id: @pet.id, vaccin_id: vaccin.id } %>
-            </div>
-          </div>
-        <% end %>
-      </div>
+          <% end %>
+        </div>
+      <% end %>
     </div>
-    <div class="text-end m-3" data-controller="alert">
+    <div class="text-end m-3 position-absolute top-0 end-0" data-controller="alert">
       <%= link_to raw("<i class='fa-solid fa-syringe float-end text-primary shadow myCircleIcon p-3 hoveredCircleButton'></i>"),
                           "#",
                           class: "hoveredCircleButton",
@@ -114,15 +135,19 @@
     </div>
   </div>
   <%# Weight  %>
-  <div class="card_pro d-flex flex-column justify-content-between">
+  <div class="card_pro d-flex flex-column justify-content-between position-relative">
     <div data-controller="chart alert">
       <h3 class="text-center m-3">Le suivi de poids</h3>
-      <div data-controller="chart">
-        <canvas id="myLine" data-chart-target="chart" data-label="<%= @weight_histories_labels.to_json %>" data-values="<%= @weight_histories_data.to_json %>">
-        </canvas>
-      </div>
+      <% if @weight_histories.empty?%>
+        <p>Saisir le premier poids</p>
+      <% else %>
+        <div data-controller="chart">
+          <canvas id="myLine" data-chart-target="chart" data-label="<%= @weight_histories_labels.to_json %>" data-values="<%= @weight_histories_data.to_json %>">
+          </canvas>
+        </div>
+      <% end %>
     </div>
-    <div class="text-end m-3" data-controller="alert">
+    <div class="text-end m-3 position-absolute top-0 end-0" data-controller="alert">
       <%= link_to raw("<i class='fa-solid fa-weight-scale float-end text-primary shadow myCircleIcon p-3 hoveredCircleButton'></i>"),
                           "#",
                           class: "hoveredCircleButton",
