--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -138,7 +138,7 @@
     <div data-controller="chart alert">
       <h3 class="text-center m-3">Le suivi de poids</h3>
       <% if @weight_histories.empty?%>
-        <p>Saisir le premier poids</p>
+        <p class="text-center">Vous n'avez pas encore commencé le suivi de poids de <%=@pet.name%></p>
       <% else %>
         <div data-controller="chart" class="p-4">
           <canvas id="myLine" data-chart-target="chart"
