anonymous ne fonctionne pas mais lien vers création de pet avec moins de champs obligatoire

--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -17,3 +17,10 @@
   padding: 10px; /* Ajouter un espace autour de l'icône */
   display: inline-block; /* Assurer que les styles s'appliquent correctement */
 }
+
+
+.custom_card {
+  border-radius: 20px;
+  background-color: $light-pink;
+  padding: 20px;
+}
