--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,67 +1,74 @@
-<div class="container bg-custom">
-  <div class="row justify-content-center">
-    <div class="col-12 col-sm-4 col-lg-6">
-      <div class="form-devise">
-        <i class="fa-solid fa-paw float-end text-primary"></i>
-          <div class="text-center m-4 my-5">
-            <h1>Détails de votre rendez-vous</h1>
-          </div>
-          <button class="d-none">Déplacer rendez-vous</button>
-          <button class="d-none">Annuler rendez-vous</button>
-          <div class=" d-flex flex-column justify-content-center align-items-center">
-            <div class="card mb-3 d-flex justify-content-center", style="width: 90%;">
-              <div class="card-header d-flex justify-content-center align-items-center">
-                <i class="fa-regular fa-user me-3"></i>
-                <p> Le vétérinaire :</p>
-              </div>
-              <div class="card-body d-flex justify-content-center align-items-center">
-                <%= image_tag url_for(@appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle me-4", style:"object-fit: cover"%>
-                <h6 class="card-title"><%=@professional.name%></h6>
-              </div>
-            </div>
-            <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
-              <div class="card-header d-flex justify-content-center align-items-center">
-                <i class="fa-solid fa-location-dot me-3"></i>
-                <p> Addresse :</p>
-              </div>
-              <div class="card-body d-flex justify-content-center">
-                <h6 class="card-title"><%= @professional.address %></h6>
-              </div>
-            </div>
-            <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
-              <div class="card-header d-flex justify-content-center align-items-center">
-                <i class="fa-solid fa-phone me-3"></i>
-                <p> Téléphone :</p>
-              </div>
-              <div class="card-body d-flex justify-content-center">
-                <h6 class="card-title"><%= @professional.phone.to_s %></h6>
-              </div>
-            </div>
-            <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
-              <div class="card-header d-flex justify-content-center align-items-center">
-                <i class="fa-regular fa-calendar me-3"></i>
-                <p> Date du rendez-vous:</p>
-              </div>
-              <div class="card-body d-flex justify-content-center">
-                <h6 class="card-title"><%= @appointment.date.strftime("%d/%m/%Y") %></h6>
-              </div>
-            </div>
-            <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
-              <div class="card-header d-flex justify-content-center align-items-center">
-                <i class="fa-regular fa-clock me-3"></i>
-                <p> Heure du rendez-vous:</p>
-              </div>
-              <div class="card-body d-flex justify-content-center">
-                <h6 class="card-title"><%= @appointment.start_time.strftime("%H:%M") %></h6>
-              </div>
-            </div>
-          </div>
-        <div class="text-center m-4">
-          <div class="p-2">
-            <%= link_to 'Retour à la page d\'accueil', root_path, class: 'btn btn-primary' %>
-          </div>
+<div class="container">
+  <%# title %>
+  <div class=" text-center my-5 d-flex flex-row justify-content-center">
+    <h1>Détails de votre rendez-vous</h1>
+    <i class="fa-solid fa-paw float-end text-primary"></i>
+  </div>
+  <%# appointment confirmation formular %>
+  <div class="row" style="height: 100%">
+    <div class="custom_card col-lg-6 col-md-12 col-sm-12">
+      <div class="card mb-3 d-flex justify-content-center">
+        <div class="card-header d-flex justify-content-center align-items-center">
+          <i class="fa-regular fa-user me-3"></i>
+          <p> Le vétérinaire :</p>
+        </div>
+        <div class="card-body d-flex justify-content-center align-items-center">
+          <%= image_tag url_for(@appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle me-4", style:"object-fit: cover"%>
+          <h6 class="card-title"><%=@professional.name%></h6>
+        </div>
+      </div>
+      <div class="card d-flex justify-content-center mb-3">
+        <div class="card-header d-flex justify-content-center align-items-center">
+          <i class="fa-solid fa-location-dot me-3"></i>
+          <p> Addresse :</p>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <h6 class="card-title"><%= @professional.address %></h6>
+        </div>
+      </div>
+      <div class="card d-flex justify-content-center mb-3">
+        <div class="card-header d-flex justify-content-center align-items-center">
+          <i class="fa-solid fa-phone me-3"></i>
+          <p> Téléphone :</p>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <h6 class="card-title"><%= @professional.phone.to_s %></h6>
         </div>
       </div>
     </div>
+    <div class="custom_card col-lg-6 col-md-12 col-sm-12" style="flex-grow: 1">
+      <div class="card mb-3">
+        <div class="card-header d-flex justify-content-center align-items-center">
+          <i class="fa-regular fa-calendar me-3"></i>
+          <p> Date du rendez-vous:</p>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <h6 class="card-title"><%= @appointment.date.strftime("%d/%m/%Y") %></h6>
+        </div>
+      </div>
+      <div class="card d-flex justify-content-center mb-3">
+        <div class="card-header d-flex justify-content-center align-items-center">
+          <i class="fa-regular fa-clock me-3"></i>
+          <p> Heure du rendez-vous:</p>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <h6 class="card-title"><%= @appointment.start_time.strftime("%H:%M") %></h6>
+        </div>
+      </div>
+      <div class="card d-flex justify-content-center mb-3">
+        <div class="card-header d-flex justify-content-center align-items-center">
+          <i class="fa-solid fa-dog me-3"></i>
+          <p> Animal concerné:</p>
+        </div>
+        <div class="card-body d-flex justify-content-center">
+          <h6 class="card-title"><%= @appointment.pet.name %></h6>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center">
+
+      <%= link_to 'Retour à la page d\'accueil', root_path, class: 'btn btn-primary my-4 rounded rounded-4' %>
+
   </div>
 </div>
