--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-
 <div>
   <div>
     <div class="p-4 text-center">
@@ -22,16 +21,21 @@
               <i class="fa-solid fa-plus"></i>
             </a>
           </div>
-
-
           <% if @pets.empty? %>
             <p class="mt-3">Vous n'avez pas d'animaux</p>
             <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734435780/dog-thinking-about-bone-removebg-preview_nlayll.png" alt="pas d'animaux" style="width: 200px; ">
           <% else %>
-            <div class="d-flex flex-row justify-content-center align-items-center h-75 hoveredCircleButton" >
+            <div class="d-flex flex-row justify-content-start align-items-center h-75 overflow-auto custom-scroll" style="white-space: nowrap; max-width: 100%;">
               <% @pets.each do |pet| %>
-                <a href="<%=user_pet_path(current_user, pet)%>" class="text-decoration-none">
-                  <%= cl_image_tag pet.photo.key, width: 200, style: "border-radius: 50%; aspect-ratio: 1;", class:"shadow object-fit-cover"%>
+                <a href="<%= user_pet_path(current_user, pet) %>" class="text-decoration-none mx-2 hoveredCircleButton" style="display: inline-block;">
+                  <% if pet.photo.present? %>
+                    <%= cl_image_tag pet.photo.key, width: 200, style: "border-radius: 50%; aspect-ratio: 1;", class: "shadow object-fit-cover" %>
+                  <% else %>
+                    <img  src="https://res.cloudinary.com/dsbteudoz/image/upload/v1736071797/production/l36dmns98zvw0qbpvjtduy102ebz.jpg"
+                          alt="photo_pet_default"
+                          class="shadow object-fit-cover"
+                          style="border-radius: 50%; aspect-ratio: 1; width: 200px;">
+                  <% end %>
                 </a>
               <% end %>
             </div>
