--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -18,7 +18,7 @@
                   <p class="text-start mx-2 mt-2" style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%= professional.description %></p>
               </a>
             </div>
-            <%= render "shared/available_slots", professional: professional%>
+            <%= render "available_slots", professional: professional%>
           </div>
         </div>
       <%end%>
