--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -1,8 +1,8 @@
 <div class="simple-calendar">
-  <div class="calendar-heading">
-    <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
-    <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-    <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
+  <div class="calendar-heading d-flex justify-content-between align-items-end">
+    <%= link_to t('simple_calendar.previous', default: 'Précédente'), calendar.url_for_previous_view, class: "m-2" %>
+    <h5 class="m-2"> Les rendez-vous de la semaine pour tous les professionnels </h5>
+    <%= link_to t('simple_calendar.next', default: 'Suivante'), calendar.url_for_next_view, class: "m-2" %>
   </div>
 
   <table class="table table-striped">
